--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,5 +1,6 @@
 {% extends 'flatpages/default.html' %}
 
+{% load custom_filters %}
 
 {% block title %}
 Posts
@@ -18,9 +19,9 @@ Posts
             </tr>
             {% for post in posts %}
             <tr>
-                <td>{{ post.title }} </td>
+                <td>{{ post.title|censor }} </td>
                 <td>{{ post.time }}</td>
-                <td>{{ post.text|truncatewords:20 }}</td>
+                <td>{{ post.text|truncatewords:20|censor }}</td>
             </tr>
             {% endfor %}
         </table>
