--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -27,10 +27,10 @@
                            <a class="nav-link" href="/about/">About</a>
                        </li>
                        <li class="nav-item">
-                           <a class="nav-link" href="/posts/">Posts</a>
+                           <a class="nav-link" href="/posts/">Новости</a>
                        </li>
                        <li class="nav-item">
-                           <a class="nav-link" href="/Information/">Information</a>
+                           <a class="nav-link" href="/posts/search/">Поиск</a>
                        </li>
                    </ul>
                </div>
