--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -24,7 +24,9 @@
                <div class="collapse navbar-collapse" id="navbarResponsive">
                    <ul class="navbar-nav ml-auto">
                        <li class="nav-item">
-                           <a class="nav-link" href="/about/">About</a>
+                           <a class="nav-link" href="/accounts/login/">LogIn</a>
+                       <li class="nav-item">
+                           <a class="nav-link" href="/accounts/logout/">LogOut</a>
                        </li>
                        <li class="nav-item">
                            <a class="nav-link" href="/posts/">Новости</a>
