все еще домашка

--- a/templates/post.html
+++ b/templates/post.html
@@ -13,4 +13,5 @@ Post
     <hr>
     <p>{{ post.text|censor }} </p>
     <p> {{ is_not_subscribe }} </p>
+    <p> {{ post_category }} </p>
 {% endblock content %}
