создана кнопка подписки, осталось отправка писем

--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -25,14 +25,18 @@
                    <ul class="navbar-nav ml-auto">
                        <li class="nav-item">
                            <a class="nav-link" href="/accounts/login/">LogIn</a>
+                       </li>
                        <li class="nav-item">
-                           <a class="nav-link" href="/accounts/logout/">LogOut</a>
+                           <a class="nav-link" href="/sign/signup/">SignUp</a>
                        </li>
                        <li class="nav-item">
                            <a class="nav-link" href="/posts/">Новости</a>
                        </li>
                        <li class="nav-item">
                            <a class="nav-link" href="/posts/search/">Поиск</a>
+                       </li>
+                       <li class="nav-item">
+                           <a class="nav-link" href="/posts/create">Создать пост</a>
                        </li>
                    </ul>
                </div>
