--- a/templates/posts.html
+++ b/templates/posts.html
@@ -19,7 +19,7 @@ Posts
             </tr>
             {% for post in posts %}
             <tr>
-                <td>{{ post.title|censor }} </td>
+                <td> <a href="{{post.id}}"> {{ post.title|censor }} </a></td>
                 <td>{{ post.time }}</td>
                 <td>{{ post.text|truncatewords:20|censor }}</td>
             </tr>
