Закончил задание отправку писем подписанным пользователям

--- a/templates/post.html
+++ b/templates/post.html
@@ -23,7 +23,5 @@ Post
         {% endif %}
     {% endfor %}
 
-
-    <p> {{ post_category }} </p>
-    <p> {{ user_subscribers }} </p>
+    <p> Автор поста: {{ post.author }} </p>
 {% endblock content %}
