В разработке функция переодической оповещения на почту

--- a/templates/post.html
+++ b/templates/post.html
@@ -24,4 +24,5 @@ Post
     {% endfor %}
 
     <p> Автор поста: {{ post.author }} </p>
+    <button> <a href="{{post.id}}/delete">Удалить</a> </button>
 {% endblock content %}
