--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -27,7 +27,7 @@
                            <a class="nav-link" href="/accounts/login/">LogIn</a>
                        </li>
                        <li class="nav-item">
-                           <a class="nav-link" href="/sign/signup/">SignUp</a>
+                           <a class="nav-link" href="/accounts/signup/">SignUp</a>
                        </li>
                        <li class="nav-item">
                            <a class="nav-link" href="/posts/">Новости</a>
