--- a/templates/post_send_email.html
+++ b/templates/post_send_email.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h2> Здравствуй, {{ user_name }}. Новая статья в твоем любимом разделе! </h2>
-    <h3> {{ post.title }} </h3>
+    <h3> <a href="{{ link }}">{{ post.title }}</a> </h3>
     <p> {{ post.text|truncatechars:75 }}</p>
 </body>
 </html>
